--- a/AngularClient/src/app/salesLead/lead-details/lead-details.component.html
+++ b/AngularClient/src/app/salesLead/lead-details/lead-details.component.html
@@ -131,7 +131,7 @@
             </div>
             <div class="col-md-4" style="text-align:right;">
                 <div id="RaisedByClientDiv">
-                    Ticket Raised By : <font style="color:blue;">{{leadDetail.cName}}</font>
+                    Lead Raised By : <font style="color:blue;">{{leadDetail.cName}}</font>
                 </div>
             </div>
         </div>
@@ -572,6 +572,9 @@
                         <option value="Wholesaler">Wholesaler</option>
                         <option value="Manufacturer">Manufacturer</option>
                         <option value="Service">Service</option>
+                        <option value="Traders">Traders</option>
+                        <option value="Importers">Importers</option>
+                        <option value="Exporters">Exporters</option>
                     </select>
                 </div>
                 <div class="form-group col-md-4">
