--- a/AngularClient/src/app/salesLead/lead-generation/lead-generation.component.html
+++ b/AngularClient/src/app/salesLead/lead-generation/lead-generation.component.html
@@ -131,6 +131,9 @@
                         <option value="Wholesaler">Wholesaler</option>
                         <option value="Manufacturer">Manufacturer</option>
                         <option value="Service">Service</option>
+                        <option value="Traders">Traders</option>
+                        <option value="Importers">Importers</option>
+                        <option value="Exporters">Exporters</option>
                     </select>
                 </div>
                 <div class="form-group col-md-4">
