--- a/AngularClient/src/app/shared/rich-text-editor/rich-text-editor.component.html
+++ b/AngularClient/src/app/shared/rich-text-editor/rich-text-editor.component.html
@@ -2,8 +2,10 @@
 
 </div>
 <div class="d-flex justify-content-end">
-    <button class="btn btn-sm btn-primary my-2" (click)="onSubmit()">
-        Submit
-    </button>
-    <ng-content></ng-content>
+    <div>
+        <button class="btn btn-sm btn-primary my-2" (click)="onSubmit()">
+            Submit
+        </button>
+        <ng-content></ng-content>
+    </div>
 </div>
