--- a/AngularClient/src/app/salesLead/lead-details/lead-details.component.html
+++ b/AngularClient/src/app/salesLead/lead-details/lead-details.component.html
@@ -347,8 +347,8 @@
                         
                             <app-color-table [tableData]="ContactList" [columns]="[
                                 {colName: 'Name',colData: 'cName'},
-                                {colName: 'Contact',colData: 'cName'},
-                                {colName: 'Email',colData: 'cName'},
+                                {colName: 'Contact',colData: 'cNumber'},
+                                {colName: 'Email',colData: 'cEmail'},
                                 {colName: 'Designation',colData: 'cDesignation'},
                                 {colName: 'Description',colData: 'cDescription'},
                                 ]">
