--- a/AngularClient/src/app/salesLead/lead-generation/lead-generation.component.html
+++ b/AngularClient/src/app/salesLead/lead-generation/lead-generation.component.html
@@ -172,6 +172,14 @@
                 </div>
 
             </div>
+            <div class="form-row">
+                <!-- <div class="form-group col-md-4"></div>
+                <div class="form-group col-md-4"></div> -->
+                <div class="form-group col-md-4">
+                    <span>Assign to me
+                    <input type="checkbox" class="ml-1" formControlName="assignToMe"></span>
+                </div>
+            </div>
 
             <!-- <div class="form-row">
                 <div class="form-group col-md-4">
