--- a/AngularClient/src/app/Ticket/worklist/view-ticket/view-ticket.component.html
+++ b/AngularClient/src/app/Ticket/worklist/view-ticket/view-ticket.component.html
@@ -296,12 +296,12 @@
                                                         <i class="fas fa-ellipsis-v"></i>
                                                     </button>
                                                     <div class="dropdown-menu dropdown-menu-right shadow-lg">
-                                                        <button class="dropdown-item" type="button"
+                                                        <!-- <button class="dropdown-item" type="button"
                                                             onclick="TicketAsignee.UpdateOnClick()">
                                                             <i class="far fa fa-edit"></i> Update
-                                                        </button>
+                                                        </button> -->
                                                         <button class="dropdown-item" type="button"
-                                                            onclick="TicketAsignee.DeleteOnClick()">
+                                                            (click)="TicketAsigneeDeleteOnClick(ticketAsignee)">
                                                             <i class="far fa fa-trash"></i> Delete
                                                         </button>
                                                     </div>
