--- a/AngularClient/src/app/salesLead/lead-generation/success-leads/success-leads.component.html
+++ b/AngularClient/src/app/salesLead/lead-generation/success-leads/success-leads.component.html
@@ -9,7 +9,7 @@
 [columns]="[
     {colName:'project',colData:'pName'},
     {colName:'company',colData:'cName'},
-    {colName:'Title',colData:'lTitle'},
+    {colName:'Title',colData:'lTitle',enableRedirect:true},
     {colName:'category',colData:'category'},
     {colName:'tagList',colData:'tagList'},
     {colName:'AssignedTo',colData:'assignedToName'},
@@ -19,4 +19,5 @@
     {colName:'nextFollowUpDate',colData:'nextFollowUpDate',isDate:true}
     
     ]" 
+    (redirectAction)="handleRedirect($event)"
 ></app-color-datatable>
