--- a/AngularClient/src/app/salesLead/lead-worklist/lead-assigned-to-me/lead-assigned-to-me.component.html
+++ b/AngularClient/src/app/salesLead/lead-worklist/lead-assigned-to-me/lead-assigned-to-me.component.html
@@ -7,15 +7,17 @@
     { actionName: 'View',actionIcon: 'fa fa-eye' },
     ]"
 [columns]="[
-    {colName:'project',colData:'pName'},
-    {colName:'company',colData:'cName'},
-    {colName:'Title',colData:'lTitle'},
-    {colName:'category',colData:'category'},
-    {colName:'tagList',colData:'tagList'},
-    {colName:'AssignedTo',colData:'assignedToName'},
-    {colName:'leadStatus',colData:'leadStatus'},
-    {colName:'leadPriority',colData:'leadPriority'},
-    {colName:'leadDate',colData:'leadDate',isDate:true},
-    {colName:'nextFollowUpDate',colData:'nextFollowUpDate',isDate:true}
-    ]" 
+{colName:'project',colData:'pName'},
+{colName:'company',colData:'cName'},
+{colName:'Title',colData:'lTitle',enableRedirect:true},
+{colName:'category',colData:'category'},
+{colName:'tagList',colData:'tagList'},
+{colName:'AssignedTo',colData:'assignedToName'},
+{colName:'leadStatus',colData:'leadStatus'},
+{colName:'leadPriority',colData:'leadPriority'},
+{colName:'leadDate',colData:'leadDate',isDate:true},
+{colName:'nextFollowUpDate',colData:'nextFollowUpDate',isDate:true}
+
+]" 
+(redirectAction)="handleRedirect($event)"
 ></app-color-datatable>
