daybook table html

--- a/AngularClient/src/app/salesLead/lead-worklist/lead-worklist.component.html
+++ b/AngularClient/src/app/salesLead/lead-worklist/lead-worklist.component.html
@@ -12,7 +12,7 @@
                 <div class="nav nav-tabs tra_tab" id="nav-tab" role="tablist">
                     <a routerLinkActive="active" routerLink="work-in-progress" (click)="changeTitle('Work in progress')">Work in progress</a>
                     <a routerLinkActive="active" routerLink="assigned-to-me" (click)="changeTitle('Assigned to me')">Assigned to me</a>
-                    <a routerLinkActive="active" routerLink="open-leads" (click)="changeTitle('Open Leads')">Open Leads</a>
+                    <a routerLinkActive="active" routerLink="open-leads" (click)="changeTitle('Open Leads')">New Leads</a>
                     <a routerLinkActive="active" routerLink="closed-leads" (click)="changeTitle('Closed Leads')">Closed Leads</a>
                     <a routerLinkActive="active" routerLink="assigned-to-others" (click)="changeTitle('Assigned to Others')">Assigned to Others</a>
                     <a routerLinkActive="active" routerLink="success-leads" (click)="changeTitle('Success Leads')">Success</a>
